fixing cutoff

--- a/src/index.css
+++ b/src/index.css
@@ -114,7 +114,7 @@ code {
 
 .queueDiv {
   width: 80%;
-  height: 80vh;
+  height: 85vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
